src-ken&y/objects/Payment__c.object
<CustomObject>
    <customHelpPage>HelpIntercompanyInvoices</customHelpPage>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Payment Currency</relationshipLabel>
        <relationshipName>Payment_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalized hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The bank Account from which the transaction is being initiated.</description>
        <label>From Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>From Bank Account does not belong to the selected company.</errorMessage>
            <filterItems>
                <field>$Source.From_Company__c</field>
                <operation>equals</operation>
                <valueField>Bank_Account__c.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_City__c</fullName>
        <label>From City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>From Company Payments</relationshipLabel>
        <relationshipName>From_Company_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Country__c</fullName>
        <label>From Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_State__c</fullName>
        <label>From State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Street__c</fullName>
        <label>From Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Zip_Code__c</fullName>
        <label>From Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>OR(

Exceptions_Count__c &gt; 0,

Line_Exceptions__c &gt; 0

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions__c</fullName>
        <label>Line Exceptions</label>
        <summaryFilterItems>
            <field>Payment_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Line__c.Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>Reference number could be a check number / memo of the transaction</description>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>To Bank Account does not belong to the selected company.</errorMessage>
            <filterItems>
                <field>$Source.To_Company__c</field>
                <operation>equals</operation>
                <valueField>Bank_Account__c.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Payments (To Bank Account)</relationshipLabel>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_City__c</fullName>
        <label>To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>To Company Payments</relationshipLabel>
        <relationshipName>To_Company_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Country__c</fullName>
        <label>To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_State__c</fullName>
        <label>To State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Street__c</fullName>
        <label>To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_Zip_Code__c</fullName>
        <label>To Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Lines__c</fullName>
        <label>Total Number of Lines</label>
        <summaryForeignKey>Payment_Line__c.Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intercompany Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intercompany Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From_Company__c</columns>
        <columns>To_Company__c</columns>
        <columns>To_Bank_Account__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Finalized__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>